--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -6,8 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/styles/selectedCountry.css">
   </head>
   <body class="container">
@@ -168,14 +166,13 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-    <script src="assets/scripts/config.js"></script>
-    <script src="assets/scripts/section1.js"></script>
-    <script src="assets/scripts/section2.js"></script>
-    <script src="assets/scripts/section3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <!-- <script src="assets/scripts/config.js"></script> -->
+    <script src="assets/scripts/sc1-General.js"></script>
+    <script src="assets/scripts/sc2-Traveler.js"></script>
+    <script src="assets/scripts/sc3-News.js"></script>
     <script src="assets/scripts/allLanguagesJSON.js"></script>
-    <script src="assets/scripts/section4.js"></script>
+    <script src="assets/scripts/sc4-Translator.js"></script>
     <script src="assets/scripts/selectedCountry.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6eZpeiZmAvkg_cwPD1AtUMoVb4Itn5n4&callback=initMap">
