--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-    <!-- <script src="assets/scripts/config.js"></script>              -->
+    <script src="assets/scripts/config.js"></script>
     <script src="assets/scripts/index.js"></script>
   </body>
 </html>
