--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -167,7 +167,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-    <!-- <script src="assets/scripts/config.js"></script> -->
+    <script src="assets/scripts/config.js"></script>
     <script src="assets/scripts/sc1-General.js"></script>
     <script src="assets/scripts/sc2-Traveler.js"></script>
     <script src="assets/scripts/sc3-News.js"></script>
