cleaned up css on about page and index

--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -174,8 +174,6 @@
     <script src="assets/scripts/allLanguagesJSON.js"></script>
     <script src="assets/scripts/sc4-Translator.js"></script>
     <script src="assets/scripts/selectedCountry.js"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6eZpeiZmAvkg_cwPD1AtUMoVb4Itn5n4&callback=initMap">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6eZpeiZmAvkg_cwPD1AtUMoVb4Itn5n4&callback=initMap"></script>
     </body>
 </html>
