--- a/aboutBorderless.html
+++ b/aboutBorderless.html
@@ -3,41 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>About Borderless</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-QqZs0aSOGFan3GWVdP4PyCBp6icaF/4n8Q+wsmZUTiiVIqE4r4tFYcb8Osf+8y45" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="assets/styles/aboutBorderless.css">
   </head>
   <body>
-    <header class="container-fluid" id="logo">
-      <h2>BORDERLESS</h2>
-      <p>Get lost. Stay informed.</p>
-    </header>
-    <div class="container-fluid">
-      <h3>About this App</h3>
-      <p>
-        An app to aggregate info for smart travel planning. Information targeted for display include visa requirements, travel advisories(country and neighboring countries), vaccination recommendation, electricity voltage info, telephone pre-fixes, currency exchange rates as well as recent news stories related to that country.
-
-        Someone who is interested in having a reference for organizing details on a trip or is prepping final details for a trip that's already been planned while staying informed on current events.
-      </p>
-      <p>
-        API's consumed:
-          - Travelbriefing.org public API
-          - Google Maps API
-          - Google Timezone API
-          - Country.io Data
-          - New York Times API
-          - The Guardian API
-          - Yandex Translate
-      </p>
-      <h3>About the Developer</h3>
-      <p>
-        Galvanize student.
-      </p>
-      <p>
-        Email me!
-        See this project on GitHub!
-      </p>
+    <div class="container">
+      <div class="row">
+        <header class="col s12">
+          <a href="index.html">
+            <h2>BORDERLESS</h2>
+            <p>Get lost. Stay informed.</p>
+          </a>
+        </header>
+      </div>
     </div>
 
+    <div class="container main">
+      <div>
+        <h5>About this App</h5>
+        <p>
+          An app to aggregate info for smart travel planning. Information targeted for display include visa requirements, travel advisories(country and neighboring countries), vaccination recommendation, electricity voltage info, telephone pre-fixes, currency exchange rates as well as recent news stories related to that country.
+          Someone who is interested in having a reference for organizing details on a trip or is prepping final details for a trip that's already been planned while staying informed on current events.
+        </p>
+        <p>
+          API's consumed
+            - Travelbriefing.org public API
+            - Google Maps API
+            - Google Timezone API
+            - Country.io Data
+            - New York Times API
+            - The Guardian API
+            - Yandex Translate
+        </p>
+      </div>
+      <div>
+        <h5>About the Developer</h5>
+        <p>
+          Galvanize student.
+        </p>
+        <p>
+          Email me!
+          See this project on GitHub!
+        </p>
+      </div>
+    </div>
   </body>
 </html>
