--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Borderless: Get Lost.Stay Informed</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="assets/styles/index.css">
   </head>
 
   <body>
-    <div class="wrapper">
-      <div class="header">
-        <header id="logo">
-          <h2>BORDERLESS </h2>
-          <p>Get lost. Stay informed. </p>
+    <div class="container">
+      <div class="row">
+        <header class="col s12">
+          <a href="index.html">
+            <h2>BORDERLESS</h2>
+            <p>Get lost. Stay informed.</p>
+          </a>
         </header>
       </div>
-      <div class="search">
-        <div class="valign-wrapper center-block" id="searchBoxWrapper">
-          <div id="miniWrapper">
-            <h3>Where to?</h3>
-            <form class="form-horizontal">
-              <div class="form-group">
-                <input class="form-control input-lg" type="text" id="searchBox" placeholder="Find a destination by country">
-              </div>
-              <div class="form-group" id="submitBtn">
-                <button type="submit" class="btn btn-primary"id="submit">Let's Go!</button>
-              </div>
-            </form>
+
+      <div class="container valign input">
+        <h4 class="left-align">Where to?</h4>
+        <form class="form-horizontal">
+          <div class="form-group center-align">
+            <input class="form-control input-lg" type="text" id="searchBox" placeholder="Find a destination by country">
           </div>
-        </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary"id="submit">Let's Go!</button>
+          </div>
+        </form>
       </div>
-      <div>
-        <footer class ="right">
-          <a href="index.html">Home</a>
-          <span> / </span>
+
+      <div="row">
+        <footer class ="right-align">
           <a href="aboutBorderless.html">About this App</a>
         </footer>
       </div>
