mid css revisions selected countries;;fka .scontainer fixed

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 
   <body>
     <div class="container">
-      <div class="row">
-        <header class="col s12">
-          <a href="index.html">
-            <h2>BORDERLESS</h2>
-            <p>Get lost. Stay informed.</p>
-          </a>
-        </header>
+      <div class="container">
+        <div class="row">
+          <header class="col s12">
+            <a href="index.html">
+              <h2>BORDERLESS</h2>
+              <p>Get lost. Stay informed.</p>
+            </a>
+          </header>
+        </div>
       </div>
-
+      
       <div class="container valign input">
         <h4 class="left-align">Where to?</h4>
         <form class="form-horizontal">
@@ -32,7 +34,7 @@
         </form>
       </div>
 
-      <div="row">
+      <div class="row">
         <footer class ="right-align">
           <a href="aboutBorderless.html">About this App</a>
         </footer>
