--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -8,58 +8,58 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/selectedCountry.css">
   </head>
-  <body class="container">
-    <div>
-      <header id="logo">
-        <h2>BORDERLESS </h2>
-        <p>Get lost. Stay informed. </p>
-      </header>
-    </div>
-    <div class="row">
-      <div class="col s12">
-        <ul class="tabs" id="tabnav">
-          <li class="tab col s3" id="generalInfo"><a href="#general">General Info</a></li>
-          <li class="tab col s3"><a href="#visiting">Good to Knows</a></li>
-          <li class="tab col s3"><a href="#news">Current Events</a></li>
-          <li class="tab col s3"><a href="#translate">Translation</a></li>
-        </ul>
+  <body>
+    <div class="container">
+      <div class="row">
+        <header class="col s12">
+          <a href="index.html">
+            <h2>BORDERLESS</h2>
+            <p>Get lost. Stay informed.</p>
+          </a>
+        </header>
       </div>
-
-      <div id="general" class="col s12">
-        <div class="col s12" id="sec1">
-          <div class="sContainer">
-            <div class="s1info">
-              <div class="s1header">
-                <div>
-                  <h1 id="shortName"></h1>
-                  <h5 id="fullName"></h5>
-                  <p id="capital">CAPITAL: </p>
-                </div>
-                <div class="s1flag">
-                  <img id = "flag" src="" height=100px>
-                </div>
-              </div>
-              <div class="currentTimeDate">
-                <span> Current Local Time &#38; Date: </span>
-                <span id="localTD"></span>
-              </div>
-
-              <div class="timezone">
-                <span>Timezone: </span>
-                <span id="timeZone"></span>
-              </div>
-              <div class="langs">
-                <span id="langCountry">Language(s) spoken in </span>
-                <div id=langFootnote>* denotes an unofficial language of certain regions of the country</div>
-                <ul id="langList"></ul>
-              </div>
-            </div>
-            <div id="map"></div>
-          </div>
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s3"><a href="#general">General Info</a></li>
+            <li class="tab col s3"><a href="#visiting">Good to Knows</a></li>
+            <li class="tab col s3"><a href="#news">Current Events</a></li>
+            <li class="tab col s3"><a href="#translate">Translation</a></li>
+          </ul>
         </div>
       </div>
 
-      <div id="visiting" class="col s12">
+      <div class="mainSection">
+      <div class="col s12" id="general">
+        <div class="col s4">
+          <div class="s1header">
+            <div>
+              <h1 id="shortName"></h1>
+              <h5 id="fullName"></h5>
+              <p id="capital">CAPITAL: </p>
+            </div>
+            <div class="s1flag">
+              <img id = "flag" src="" height=100px>
+            </div>
+          </div>
+          <div class="currentTimeDate">
+            <span> Current Local Time &#38; Date: </span>
+            <span id="localTD"></span>
+          </div>
+          <div class="timezone">
+            <span>Timezone: </span>
+            <span id="timeZone"></span>
+          </div>
+          <div class="langs">
+            <span id="langCountry">Language(s) spoken in </span>
+            <div id=langFootnote>* denotes an unofficial language of certain regions of the country</div>
+            <ul id="langList"></ul>
+          </div>
+        </div>
+        <div id="map"></div>
+      </div>
+
+      <div class="col s12" id="visiting">
         <div class="col s12" id="sec2">
           <div class="sContainer">
             <!-- <div id="s2info"> -->
@@ -121,7 +121,7 @@
         </div>
       </div>
 
-      <div id="news" class="col s12">
+      <div class="col s12" id="news">
         <div class="col s12" id="sec3">
           <div class="sContainer">
             <div>
@@ -136,8 +136,8 @@
         </div>
       </div>
 
-      <div id="translate" class="col s12">
-        <div class="col s12" id="sec4">
+      <div class="col s12" id="translate">
+        <div id="sec4">
           <div class="sContainer">
             <div id="transWidget">
               <h5>Translation Widget</h5>
@@ -157,13 +157,15 @@
           </div>
         </div>
       </div>
-      <div>
-        <footer class ="right">
-          <a href="index.html">Home</a>
-          <span> / </span>
+    </div>
+
+
+      <div class="row">
+        <footer class ="right-align">
           <a href="aboutBorderless.html">About this App</a>
         </footer>
       </div>
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
