--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -18,6 +18,7 @@
           </a>
         </header>
       </div>
+      <!-- tab labels -->
       <div class="row">
         <div class="col s12">
           <ul class="tabs">
@@ -28,144 +29,132 @@
           </ul>
         </div>
       </div>
-
+      <!-- content of tabs -->
       <div class="mainSection">
-      <div class="col s12" id="general">
-        <div class="col s4">
-          <div class="s1header">
-            <div>
-              <h1 id="shortName"></h1>
-              <h5 id="fullName"></h5>
-              <p id="capital">CAPITAL: </p>
+        <div class="container section">
+
+          <!-- general info section -->
+          <div class="row" id="general">
+            <div class="col s4">
+              <div class="s1header">
+                  <h1 id="shortName"></h1>
+                  <h5 id="fullName"></h5>
+                  <p id="capital">CAPITAL: </p>
+              </div>
+              <div class="currentTimeDate">
+                <span> Current Local Time &#38; Date: </span>
+                <span id="localTD"></span>
+              </div>
+              <div class="timezone">
+                <span>Timezone: </span>
+                <span id="timeZone"></span>
+              </div>
+              <div class="langs">
+                <span id="langCountry">Language(s) spoken in </span>
+                <div class=langFootnote>* denotes an unofficial language of certain regions of the country</div>
+                <ul id="langList"></ul>
+              </div>
             </div>
-            <div class="s1flag">
-              <img id = "flag" src="" height=100px>
+
+            <div class="col s2">
+              <img id="flag" src="" height=100px>
             </div>
+
+            <div class="col s6" id="map"></div>
+
           </div>
-          <div class="currentTimeDate">
-            <span> Current Local Time &#38; Date: </span>
-            <span id="localTD"></span>
-          </div>
-          <div class="timezone">
-            <span>Timezone: </span>
-            <span id="timeZone"></span>
-          </div>
-          <div class="langs">
-            <span id="langCountry">Language(s) spoken in </span>
-            <div id=langFootnote>* denotes an unofficial language of certain regions of the country</div>
-            <ul id="langList"></ul>
-          </div>
+
         </div>
-        <div id="map"></div>
       </div>
 
-      <div class="col s12" id="visiting">
-        <div class="col s12" id="sec2">
-          <div class="sContainer">
-            <!-- <div id="s2info"> -->
+        <!-- visiting info section 2 -->
+        <div class="col s12" id="visiting">
+          <div class="col s4">
             <div class="preTravel">
               <h5>Travel Advisories</h5>
               <div id="travelAdvisories">
                 <!-- location for dynamically created TravelAdvisories -->
               </div>
-
               <div id="vaccinationRecs">
                 <h5>Vaccination Recommendations</h5>
                 <!-- location for dynamically created vaccinationRecs -->
               </div>
-
               <div class=waterAdvice>
                 <h5>Tap Water Safety</h5>
                 <div id=wAdvice></div>
               </div>
             </div>
-
-            <div class="onLocation">
-              <h5>Utilities &#38; Services</h5>
-              <div class="phone">
-                <h6>Phone Numbers</h6>
-                <div id="cCode">Country Code: </div>
-                <div id="poPo">Police: </div>
-              </div>
-              <br>
-              <div class="electical">
-                <h6>Electrical Standards</h6>
-                <div id="voltage">Voltage: </div>
-                <div id="frequency">Frequency: </div>
-                <div id="socket">Socket Type(s): </div>
-              </div>
+          </div>
+          <div class="col s4">
+            <h5>Utilities &#38; Services</h5>
+            <div class="phone">
+              <h6>Phone Numbers</h6>
+              <div id="cCode">Country Code: </div>
+              <div id="poPo">Police: </div>
             </div>
-            <div class="currency">
-              <div class="fxSummary">
-                <h5>Currency Exchange</h5>
-                <span> The currency in </span>
-                <span id=fxInfo> is </span>
-              </div>
-              <div class="fxWidget">
-                <form id="fxForm"class="col s12">
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <textarea id="fxInput" class="materialize-textarea"></textarea>
-                      <div id="fxRateFootnote">
-
-                      </div>
-                      <label id="fxLabel" for="fxInput">Convert to USD</label>
-                    </div>
-                    <a class="waves-effect waves-light btn" id="fxBtn">Calculate Conversion</a>
-                  </div>
-                </form>
-                <div id="fxList"></div>  <!-- converted fx rates go here -->
-              </div>
+            <br>
+            <div class="electical">
+              <h6>Electrical Standards</h6>
+              <div id="voltage">Voltage: </div>
+              <div id="frequency">Frequency: </div>
+              <div id="socket">Socket Type(s): </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="col s12" id="news">
-        <div class="col s12" id="sec3">
-          <div class="sContainer">
-            <div>
-              <h5>The New York Times </h5>
-              <div id="nyt"></div>
+          <div class="col s4">
+            <div class="fxSummary">
+              <h5>Currency Exchange</h5>
+              <span> The currency in </span>
+              <span id=fxInfo> is </span>
             </div>
-            <div>
-              <h5>The Guardian </h5>
-              <div id="guardian"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col s12" id="translate">
-        <div id="sec4">
-          <div class="sContainer">
-            <div id="transWidget">
-              <h5>Translation Widget</h5>
-              <form id="transForm" class="col s12">
+            <div class="fxWidget">
+              <form id="fxForm"class="col s12">
                 <div class="row">
                   <div class="input-field col s12">
-                    <textarea id="translator" class="materialize-textarea"></textarea>
-                    <label for="translator" id="transLabel"> Translate English Phrases</label>
+                    <textarea id="fxInput" class="materialize-textarea"></textarea>
+                    <div id="fxRateFootnote">
+                    </div>
+                    <label id="fxLabel" for="fxInput">Convert to USD</label>
                   </div>
-                  <a class="waves-effect waves-light btn" id="transBtn">Translate Phrase</a>
+                  <a class="waves-effect waves-light btn" id="fxBtn">Calculate Conversion</a>
                 </div>
               </form>
+              <div id="fxList"></div>  <!-- converted fx rates go here -->
             </div>
-
-            <div id="transResults"></div>
-
           </div>
         </div>
+        <!-- current events section 3 -->
+        <div class="col s12" id="news">
+          <div>
+            <h5>The New York Times </h5>
+            <div id="nyt"></div>
+          </div>
+          <div>
+            <h5>The Guardian </h5>
+            <div id="guardian"></div>
+          </div>
+        </div>
+        <!-- translator section 4 -->
+        <div class="col s12" id="translate">
+          <div id="transWidget">
+            <h5>Translation Widget</h5>
+            <form id="transForm" class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <textarea id="translator" class="materialize-textarea"></textarea>
+                  <label for="translator" id="transLabel"> Translate English Phrases</label>
+                </div>
+                <a class="waves-effect waves-light btn" id="transBtn">Translate Phrase</a>
+              </div>
+            </form>
+          </div>
+          <div id="transResults"></div>
+        </div>
       </div>
-    </div>
-
-
       <div class="row">
         <footer class ="right-align">
           <a href="aboutBorderless.html">About this App</a>
         </footer>
       </div>
-
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
@@ -177,5 +166,5 @@
     <script src="assets/scripts/sc4-Translator.js"></script>
     <script src="assets/scripts/selectedCountry.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6eZpeiZmAvkg_cwPD1AtUMoVb4Itn5n4&callback=initMap"></script>
-    </body>
+  </body>
 </html>
