general format done

--- a/selectedCountry.html
+++ b/selectedCountry.html
@@ -28,13 +28,10 @@
             <li class="tab col s3"><a href="#translate">Translation</a></li>
           </ul>
         </div>
-      </div>
-      <!-- content of tabs -->
-      <div class="mainSection">
-        <div class="container section">
-
+        <!-- section content -->
           <!-- general info section -->
-          <div class="row" id="general">
+          <div class="s12 section" id="general">
+            <!-- first column -->
             <div class="col s4">
               <div class="s1header">
                   <h1 id="shortName"></h1>
@@ -55,20 +52,17 @@
                 <ul id="langList"></ul>
               </div>
             </div>
-
+            <!-- second column -->
             <div class="col s2">
               <img id="flag" src="" height=100px>
             </div>
-
+            <!-- third column -->
             <div class="col s6" id="map"></div>
-
           </div>
 
-        </div>
-      </div>
-
         <!-- visiting info section 2 -->
-        <div class="col s12" id="visiting">
+      <div class="container section">
+        <div class="row" id="visiting">
           <div class="col s4">
             <div class="preTravel">
               <h5>Travel Advisories</h5>
@@ -122,6 +116,8 @@
             </div>
           </div>
         </div>
+      </div>
+
         <!-- current events section 3 -->
         <div class="col s12" id="news">
           <div>
@@ -155,7 +151,6 @@
           <a href="aboutBorderless.html">About this App</a>
         </footer>
       </div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
     <script src="assets/scripts/config.js"></script>
